Completed sagemaker experiment tracking

--- a/nbs/run_flow.ipynb
+++ b/nbs/run_flow.ipynb
@@ -235,13 +235,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# slow\n",
     "\n",
     "ret_code, output = check_call_flow(\n",
     "    nb_path, flow_provider=\"sagemaker\", flow_command=\"run\"\n",
     ")\n",
-    "assert ret_code == 0\n",
-    "print(output)"
+    "print(output)\n",
+    "assert ret_code == 0"
    ]
   },
   {
