--- a/nbs/s3_utils.ipynb
+++ b/nbs/s3_utils.ipynb
@@ -37,6 +37,7 @@
     "from botocore.client import Config\n",
     "from botocore.errorfactory import ClientError\n",
     "from botocore.exceptions import ConnectTimeoutError\n",
+    "from nbdev.export import get_config\n",
     "\n",
     "from sciflow.utils import lib_path, prepare_env"
    ]
@@ -387,15 +388,19 @@
     "\n",
     "def upload_directory(s3_client, path, bucket_name, prefix):\n",
     "    for root, dirs, files in os.walk(path):\n",
-    "        # Ignore non-python source files and IPython checkpoint files\n",
-    "        for file in [\n",
-    "            f\n",
-    "            for f in files\n",
-    "            if f.split(\".\")[-1] == \"py\" and root.find(\"ipynb_checkpoints\") == -1\n",
-    "        ]:\n",
-    "            s3_client.upload_file(\n",
-    "                os.path.join(root, file), bucket_name, f\"{prefix}/{file}\"\n",
-    "            )"
+    "        if \".ipynb_checkpoints\" not in root and \"__pycache__\" not in root:\n",
+    "            # Ignore non-python source files and IPython checkpoint files\n",
+    "            for file in [\n",
+    "                f\n",
+    "                for f in files\n",
+    "                if f.split(\".\")[-1] == \"py\" and root.find(\"ipynb_checkpoints\") == -1\n",
+    "            ]:\n",
+    "                if root != path:\n",
+    "                    sub_dir = Path(root).parts[-1]\n",
+    "                    upload_key = f\"{prefix}/{sub_dir}/{file}\"\n",
+    "                else:\n",
+    "                    upload_key = f\"{prefix}/{file}\"\n",
+    "                s3_client.upload_file(os.path.join(root, file), bucket_name, upload_key)"
    ]
   },
   {
@@ -404,11 +409,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert not (objects_exist_in_dir(s3_res, bucket_name, f\"{test_dir}/_nbdev.py\"))\n",
+    "lib_name = get_config().get(\"lib_name\")\n",
+    "\n",
+    "assert not (\n",
+    "    objects_exist_in_dir(s3_res, bucket_name, f\"{test_dir}/{lib_name}/_nbdev.py\")\n",
+    ")\n",
     "\n",
     "upload_directory(s3_client, str(lib_path()), bucket_name, test_dir)\n",
     "\n",
-    "assert objects_exist_in_dir(s3_res, bucket_name, f\"{test_dir}/_nbdev.py\")"
+    "assert objects_exist_in_dir(s3_res, bucket_name, f\"{test_dir}/{lib_name}/_nbdev.py\")"
    ]
   },
   {
