--- a/nbs/to_sagemaker.ipynb
+++ b/nbs/to_sagemaker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,10 +56,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
     "from sciflow.to_metaflow import write_track_capture"
    ]
   },
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,27 +111,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Path('/home/sagemaker-user/git/sciflow/nbs/test/flows/sagemaker/test_tracking.py')"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "flow_path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,6 +391,8 @@
     "            flow_file.write(sm_params_import + \"\\n\")\n",
     "\n",
     "        flow_file.write(\"from sciflow.s3_utils import upload_directory\\n\")\n",
+    "        if track_experiment:\n",
+    "            flow_file.write(\"from sciflow.experiment.tracking import FlowTracker\\n\")\n",
     "        flow_file.write(\"\\n\")\n",
     "        flow_file.write(\n",
     "            f\"from {fq_module_name} import {', '.join([s.name for s in steps])}\\n\"\n",
@@ -487,7 +480,7 @@
     "        flow_file.write(f\"{ind}{ind}return pipeline\\n\")\n",
     "        flow_file.write(\"\\n\")\n",
     "\n",
-    "        flow_file.write(f\"{ind}def init(self):\\n\")\n",
+    "        flow_file.write(f\"{ind}def __init__(self):\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}self.bucket = os.environ['SCIFLOW_BUCKET']\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}self.role = sagemaker.get_execution_role()\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}self.region = 'eu-west-1'\\n\")\n",
@@ -496,6 +489,9 @@
     "        )\n",
     "        flow_file.write(\n",
     "            f\"{ind}{ind}self.flow_name = \\\"{extract_module_only(module_name).replace('_', '-')}\\\"\\n\"\n",
+    "        )\n",
+    "        flow_file.write(\n",
+    "            f'{ind}{ind}self.flow_base_key = \"{extract_module_only(module_name)}\"\\n'\n",
     "        )\n",
     "        flow_file.write(\n",
     "            f\"{ind}{ind}run_timestamp = datetime.today().__str__().replace(':', '-').replace('.', '-').replace(' ', '-')[:-3]\\n\"\n",
@@ -538,7 +534,6 @@
     "\n",
     "        flow_file.write(\"\\n\")\n",
     "        flow_file.write(f\"{ind}def show(self):\\n\")\n",
-    "        flow_file.write(f\"{ind}{ind}self.init()\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}pipeline = self.get_pipeline()\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}pipeline.upsert(role_arn=self.role)\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}description = pipeline.describe()\\n\")\n",
@@ -552,7 +547,6 @@
     "        flow_file.write(\"\\n\")\n",
     "\n",
     "        flow_file.write(f\"{ind}def run(self):\\n\")\n",
-    "        flow_file.write(f\"{ind}{ind}self.init()\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}pipeline = self.get_pipeline()\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}pipeline.upsert(role_arn=self.role)\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}execution = pipeline.start()\\n\")\n",
@@ -570,27 +564,38 @@
     "        flow_file.write(f\"{ind}{ind}if sys.argv[1] == 'show':\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}{pipeline_class_name}().show()\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}if sys.argv[1] == 'run':\\n\")\n",
-    "        \n",
+    "\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}flow = {pipeline_class_name}()\\n\")\n",
     "        if track_experiment:\n",
-    "            flow_file.write(f\"{ind}{ind}{ind}flow_tracker = FlowTracker(os.environ['SCIFLOW_BUCKET'], flow_base_key, flow_run_id, steps)\\n\")\n",
+    "            flow_file.write(\n",
+    "                f\"{ind}{ind}{ind}flow_tracker = FlowTracker(os.environ['SCIFLOW_BUCKET'], flow.flow_base_key, flow.flow_run_id, flow.steps)\\n\"\n",
+    "            )\n",
     "            flow_file.write(f\"{ind}{ind}{ind}flow_tracker.start()\\n\\n\")\n",
-    "            flow_file.write(f\"{ind}{ind}{ind}try:\")\n",
-    "            flow_file.write(f\"{ind}{ind}{ind}{ind}flow = {pipeline_class_name}()\\n\")\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}try:\\n\")\n",
+    "\n",
     "            flow_file.write(f\"{ind}{ind}{ind}{ind}if len(sys.argv[2:]) > 0:\\n\")\n",
     "            flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}args = sys.argv[2:]\\n\")\n",
     "            flow_file.write(\n",
     "                f\"{ind}{ind}{ind}{ind}{ind}flow.args = dict(list(zip(args, args[1:]))[::2])\\n\"\n",
     "            )\n",
     "            flow_file.write(f\"{ind}{ind}{ind}{ind}flow.run()\\n\")\n",
-    "            flow_file.write(f\"{ind}{ind}{ind}{ind}except (KeyboardInterrupt):\\n\")\n",
-    "            flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}flow_tracker.interrupted()\\n\")\n",
-    "            flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}print(f\\\"Flow interrupted by user: {{flow_run_id}}\\\")\\n\")\n",
-    "            flow_file.write(f\"{ind}{ind}{ind}{ind}except BaseException:\\n\")\n",
-    "            flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}exc_type, exc_value, trace = sys.exc_info()\\n\")\n",
-    "            flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}except_info = {{\\\"exc_type\\\": exc_type, \\\"exc_value\\\": exc_value, \\\"trace\\\": trace}}\\n\")\n",
-    "            flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}flow_tracker.failed(except_info)\\n\")\n",
-    "            flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}print(f\\\"Flow failed: {{flow_run_id}}\\\")\\n\")\n",
-    "            flow_file.write(f\"{ind}{ind}{ind}{ind}flow_tracker.completed()\\n\")  \n",
+    "            flow_file.write(f\"{ind}{ind}{ind}except (KeyboardInterrupt):\\n\")\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}{ind}flow_tracker.interrupted()\\n\")\n",
+    "            flow_file.write(\n",
+    "                f'{ind}{ind}{ind}{ind}print(f\"Flow interrupted by user: {{flow.flow_run_id}}\")\\n'\n",
+    "            )\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}except BaseException:\\n\")\n",
+    "            flow_file.write(\n",
+    "                f\"{ind}{ind}{ind}{ind}exc_type, exc_value, trace = sys.exc_info()\\n\"\n",
+    "            )\n",
+    "            flow_file.write(\n",
+    "                f'{ind}{ind}{ind}{ind}except_info = {{\"exc_type\": exc_type, \"exc_value\": exc_value, \"trace\": trace}}\\n'\n",
+    "            )\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}{ind}flow_tracker.failed(except_info)\\n\")\n",
+    "            flow_file.write(\n",
+    "                f'{ind}{ind}{ind}{ind}print(f\"Flow failed: {{flow.flow_run_id}}\")\\n'\n",
+    "            )\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}flow_tracker.completed()\\n\")\n",
     "        else:\n",
     "            flow_file.write(f\"{ind}{ind}{ind}flow = {pipeline_class_name}()\\n\")\n",
     "            flow_file.write(f\"{ind}{ind}{ind}if len(sys.argv[2:]) > 0:\\n\")\n",
@@ -605,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1123,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1156,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1210,6 +1215,8 @@
     "            sm_module_file.write(\"from pathlib import Path\\n\")\n",
     "            sm_module_file.write(\"import argparse\\n\")\n",
     "            sm_module_file.write(\"import subprocess\\n\")\n",
+    "            if track_experiment:\n",
+    "                sm_module_file.write(\"import tempfile\\n\")\n",
     "            sm_module_file.write(\"\\n\")\n",
     "            write_preamble(step, sm_module_file, ind)\n",
     "            sm_module_file.write(\"\\n\")\n",
@@ -1251,6 +1258,10 @@
     "                sm_module_file.write(f\"\\n\")\n",
     "\n",
     "            sm_module_file.write(f\"{ind}add_lib_to_pythonpath(lib_name, remote_key)\\n\")\n",
+    "            if track_experiment:\n",
+    "                sm_module_file.write(\n",
+    "                    f\"{ind}from sciflow.experiment.tracking import StepTracker\\n\"\n",
+    "                )\n",
     "            sm_module_file.write(\"\".join([f\"{ind}{lr}\" for lr in lib_refs]))\n",
     "\n",
     "            if is_processing_step(step):\n",
@@ -1303,24 +1314,22 @@
     "                        for a in step_func_args\n",
     "                    ]\n",
     "                )\n",
-    "                step_func_call_text = f\"{ind}results = {step.name}({step_func_args})\"\n",
+    "                step_func_call_text = f\"results = {step.name}({step_func_args})\"\n",
     "            else:\n",
-    "                step_func_call_text = f\"{ind}results = {step.name}()\"\n",
-    "                  \n",
+    "                step_func_call_text = f\"results = {step.name}()\"\n",
+    "\n",
     "            if track_experiment:\n",
     "                write_step_tracker(\n",
-    "                        sm_module_file,\n",
-    "                        ind,\n",
-    "                        param_meta,\n",
-    "                        steps,\n",
-    "                        step,\n",
-    "                        step_func_call_text.replace(\"self.tracker\", \"tracker\")\n",
+    "                    sm_module_file,\n",
+    "                    ind,\n",
+    "                    param_meta,\n",
+    "                    steps,\n",
+    "                    step,\n",
+    "                    step_func_call_text.replace(\"self.tracker\", \"tracker\"),\n",
     "                )\n",
     "            else:\n",
-    "                sm_module_file.write(\n",
-    "                    f'{ind}{step_func_call_text}\\n'\n",
-    "                )\n",
-    "            \n",
+    "                sm_module_file.write(f\"{ind}{ind}{step_func_call_text}\\n\")\n",
+    "\n",
     "            if is_processing_step(step):\n",
     "                sm_module_file.write(\n",
     "                    f'{ind}save_results(\"/opt/ml/processing/output\", results)\\n'\n",
@@ -1351,14 +1360,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def write_step_tracker(sm_module_file, ind, param_meta, steps, step, step_func_call_text):\n",
+    "def write_step_tracker(\n",
+    "    sm_module_file, ind, param_meta, steps, step, step_func_call_text\n",
+    "):\n",
     "    sm_module_file.write(f\"{ind}tracker = None\\n\")\n",
     "    sm_module_file.write(f\"{ind}try:\\n\")\n",
     "    sm_module_file.write(\n",
@@ -1368,6 +1379,7 @@
     "    sm_module_file.write(\n",
     "        f\"{ind}{ind}{ind}with tracker.capture_out() as tracker._output_file:\\n\"\n",
     "    )\n",
+    "    # TODO pass in heartbeat interval\n",
     "    sm_module_file.write(f\"{ind}{ind}{ind}{ind}tracker.start_heartbeat(10.0)\\n\")\n",
     "\n",
     "    if not step.has_return:\n",
@@ -1378,7 +1390,7 @@
     "                f\"[{os.path.basename(flow_file.name)}] step return variable {step.return_stmt} shadows a parameter name - parameters must be unique\"\n",
     "            )\n",
     "        sm_module_file.write(f\"{ind}{ind}{ind}{ind}{step_func_call_text}\\n\")\n",
-    "        write_track_capture(sm_module_file, ind, 5)\n",
+    "        write_track_capture(sm_module_file, ind, 4)\n",
     "\n",
     "    sm_module_file.write(f\"{ind}{ind}{ind}{ind}tracker.completed()\\n\")\n",
     "    sm_module_file.write(f\"{ind}except BaseException:\\n\")\n",
@@ -1398,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1476,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1485,17 +1497,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converted test_tracking.ipynb to TestTrackingPipeline in: test_tracking.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nb_to_sagemaker_pipeline(nb_path, flow_path, silent=False, track_experiment=False)"
    ]
@@ -1509,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1518,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1538,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1553,24 +1557,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converted test_tracking.ipynb to TestTrackingPipeline in: test_tracking.py\n",
-      "Converted test_multistep.ipynb to TestMultistepPipeline in: test_multistep.py\n",
-      "Converted test_export.ipynb to TestExportPipeline in: test_export.py\n",
-      "No params cell found for: test_module.ipynb\n",
-      "Sagemaker conversion failed for test_module.ipynb, Reason: Step: first depends on variable(s) not in flow scope: \"{'some_param'}\"\n",
-      "No params cell found for: test_multistep_no_params.ipynb\n",
-      "Sagemaker conversion failed for test_multistep_no_params.ipynb, Reason: Step: preprocess depends on variable(s) not in flow scope: \"{'model_level', 'traffic_percent', 'min_date'}\"\n",
-      "Sagemaker conversion failed for test_data_handling.ipynb, Reason: Unsupported parameter type for sagemaker pipeline: <class 'dict'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "generate_flows()"
    ]
@@ -1584,23 +1573,10 @@
   }
  ],
  "metadata": {
-  "instance_type": "ml.m5.xlarge",
   "kernelspec": {
    "display_name": "sciflow (sciflow/3)",
    "language": "python",
    "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.0"
   }
  },
  "nbformat": 4,
