[WIP] Addressing issues in SM Pipeline experiment tracking - sciflow.experiment module not importing

--- a/nbs/engine.ipynb
+++ b/nbs/engine.ipynb
@@ -446,7 +446,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    assert len(engine.find_by_name(\"laketest\")) is None\n",
+    "    assert len(engine.find_by_name(\"laketest\")) == 0\n",
     "except DatabaseError:\n",
     "    print(\"Table not found\")"
    ]
@@ -457,7 +457,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# assert len(engine.find_by_name(\"engine-test\")) >= 1"
+    "assert len(engine.find_by_name(\"engine-test\")) >= 1"
    ]
   },
   {
