--- a/nbs/s3_utils.ipynb
+++ b/nbs/s3_utils.ipynb
@@ -138,7 +138,8 @@
     "invalid_bucket = \"invalid_bucket_name\"\n",
     "test_root = f\"sciflow_testing_{str(uuid.uuid4()).split('-')[-1]}\"\n",
     "test_dir = f\"{test_root}/s3_utils\"\n",
-    "local_dir = f\"/tmp/{test_root}\""
+    "lib_dir = s3_join(test_dir, \"sciflow\")\n",
+    "local_dir = f\"/tmp/{test_root}/sciflow\""
    ]
   },
   {
@@ -395,8 +396,9 @@
     "                for f in files\n",
     "                if f.split(\".\")[-1] == \"py\" and root.find(\"ipynb_checkpoints\") == -1\n",
     "            ]:\n",
+    "\n",
     "                if root != path:\n",
-    "                    sub_dir = Path(root).parts[-1]\n",
+    "                    sub_dir = root.replace(path, \"\").lstrip(\"/\")\n",
     "                    upload_key = f\"{prefix}/{sub_dir}/{file}\"\n",
     "                else:\n",
     "                    upload_key = f\"{prefix}/{file}\"\n",
@@ -414,10 +416,23 @@
     "assert not (\n",
     "    objects_exist_in_dir(s3_res, bucket_name, f\"{test_dir}/{lib_name}/_nbdev.py\")\n",
     ")\n",
+    "assert not (\n",
+    "    objects_exist_in_dir(\n",
+    "        s3_res, bucket_name, f\"{test_dir}/{lib_name}/experiment/__init__.py\"\n",
+    "    )\n",
+    ")\n",
     "\n",
-    "upload_directory(s3_client, str(lib_path()), bucket_name, test_dir)\n",
+    "upload_directory(\n",
+    "    s3_client,\n",
+    "    str(Path(lib_path(), get_config().lib_path)),\n",
+    "    bucket_name,\n",
+    "    Path(test_dir, get_config().lib_path),\n",
+    ")\n",
     "\n",
-    "assert objects_exist_in_dir(s3_res, bucket_name, f\"{test_dir}/{lib_name}/_nbdev.py\")"
+    "assert objects_exist_in_dir(s3_res, bucket_name, f\"{test_dir}/{lib_name}/_nbdev.py\")\n",
+    "assert objects_exist_in_dir(\n",
+    "    s3_res, bucket_name, f\"{test_dir}/{lib_name}/experiment/__init__.py\"\n",
+    ")"
    ]
   },
   {
@@ -436,8 +451,12 @@
     "        obj.key for obj in s3_res.Bucket(bucket_name).objects.filter(Prefix=remote_key)\n",
     "    ]\n",
     "    for file in all_files:\n",
-    "        file_name = file.split(\"/\")[-1]\n",
-    "        s3_client.download_file(bucket_name, file, f\"{local_dir}/{file_name}\")"
+    "        file_name = file.replace(remote_key, \"\").lstrip(\"/\")\n",
+    "        local_path = Path(local_dir, file_name)\n",
+    "        if not local_path.parent.exists():\n",
+    "            local_path.parent.mkdir(parents=True)\n",
+    "        s3_client.download_file(bucket_name, file, f\"{local_path}\")\n",
+    "        assert local_path.exists()"
    ]
   },
   {
@@ -448,13 +467,20 @@
    "source": [
     "assert not Path(f\"{local_dir}/_nbdev.py\").exists()\n",
     "\n",
-    "download_directory(s3_client, s3_res, bucket_name, test_dir, local_dir)\n",
+    "download_directory(s3_client, s3_res, bucket_name, lib_dir, local_dir)\n",
     "\n",
     "import shutil\n",
     "\n",
-    "py_files = [f for f in list(os.walk(local_dir))[0][2] if f.split(\".\")[-1] == \"py\"]\n",
-    "assert \"_nbdev.py\" in py_files\n",
-    "\n",
+    "assert Path(local_dir, \"_nbdev.py\").exists()\n",
+    "assert Path(local_dir, \"experiment\", \"__init__.py\").exists()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "shutil.rmtree(local_dir)\n",
     "delete_dir(s3_res, bucket_name, test_dir)"
    ]
