--- a/nbs/test/test_multistep.ipynb
+++ b/nbs/test/test_multistep.ipynb
@@ -464,9 +464,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sciflow (sciflow/3)",
+   "display_name": "python3 (dstk/6)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/dstk/6"
   }
  },
  "nbformat": 4,
