--- a/nbs/to_sagemaker.ipynb
+++ b/nbs/to_sagemaker.ipynb
@@ -469,7 +469,7 @@
     "        flow_file.write(\"\\n\")\n",
     "\n",
     "        flow_file.write(f\"{ind}{ind}pipeline = Pipeline(\\n\")\n",
-    "        flow_file.write(f\"{ind}{ind}{ind}name=self.flow_name,\\n\")\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}name=self.flow_base_key.replace('_', '-'),\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}parameters=[\\n\")\n",
     "        for param_name in params.keys():\n",
     "            flow_file.write(f\"{ind}{ind}{ind}{ind}self.{param_name},\\n\")\n",
@@ -488,9 +488,6 @@
     "            f\"{ind}{ind}self.sagemaker_session = Session(default_bucket=self.bucket)\\n\\n\"\n",
     "        )\n",
     "        flow_file.write(\n",
-    "            f\"{ind}{ind}self.flow_name = \\\"{extract_module_only(module_name).replace('_', '-')}\\\"\\n\"\n",
-    "        )\n",
-    "        flow_file.write(\n",
     "            f'{ind}{ind}self.flow_base_key = \"{extract_module_only(module_name)}\"\\n'\n",
     "        )\n",
     "        flow_file.write(\n",
@@ -498,7 +495,7 @@
     "        )\n",
     "        flow_file.write(f'{ind}{ind}self.flow_run_id = f\"pipeline-{{run_timestamp}}\"\\n')\n",
     "        flow_file.write(\n",
-    "            f'{ind}{ind}self.s3_prefix = f\"{{self.flow_name}}/{{self.flow_run_id}}\"\\n'\n",
+    "            f'{ind}{ind}self.s3_prefix = f\"{{self.flow_base_key}}/{{self.flow_run_id}}\"\\n'\n",
     "        )\n",
     "        flow_file.write(\n",
     "            f'{ind}{ind}self.flow_s3_uri = f\"s3://{{self.bucket}}/{{self.s3_prefix}}\"\\n'\n",
