test_export flow working with experiment tracking

--- a/nbs/to_sagemaker.ipynb
+++ b/nbs/to_sagemaker.ipynb
@@ -55,17 +55,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "\n",
-    "from sciflow.to_metaflow import write_track_capture"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -971,6 +960,9 @@
     "                f'{ind}{ind}{ind}code = f\"{{self.flow_s3_uri}}/code/_sciflow_{module_local_name}_{step.name}.py\",\\n'\n",
     "            )\n",
     "            job_arg_pairs = [\n",
+    "                (\"--bucket_name\", \"self.bucket\"),\n",
+    "                (\"--flow_base_key\", \"self.flow_base_key\"),\n",
+    "                (\"--flow_run_id\", \"self.flow_run_id\"),\n",
     "                (\"--lib_name\", f'\"{lib_name}\"'),\n",
     "                (\"--remote_key\", \"self.lib_code_key\"),\n",
     "            ]\n",
@@ -1064,6 +1056,9 @@
     "                step_param_meta = {k: param_meta[k] for k in step_vars[\"step_input\"]}\n",
     "                steps_param_meta[step.name] = step_param_meta\n",
     "                hyper_params = {\n",
+    "                    \"bucket_name\": \"self.bucket\",\n",
+    "                    \"flow_base_key\": \"self.flow_base_key\",\n",
+    "                    \"flow_run_id\": \"self.flow_run_id\",\n",
     "                    \"lib_name\": f'\"{lib_name}\"',\n",
     "                    \"remote_key\": \"self.lib_code_key\",\n",
     "                }\n",
@@ -1201,6 +1196,10 @@
     "            flow_path.parent, \"_sciflow_\" + flow_path.stem + f\"_{step.name}.py\"\n",
     "        )\n",
     "\n",
+    "        main_args = [\"lib_name\", \"remote_key\"]\n",
+    "        if track_experiment:\n",
+    "            main_args.extend([\"bucket_name\", \"flow_base_key\", \"flow_run_id\"])\n",
+    "\n",
     "        with open(sm_module_path, \"w\") as sm_module_file:\n",
     "            sm_module_file.write(\"\".join(lines))\n",
     "            sm_module_file.write(\"\\n\\n# SCIFLOW->SAGEMAKER ADAPTER FROM THIS POINT\\n\")\n",
@@ -1221,10 +1220,10 @@
     "            if step.name in steps_param_meta and len(steps_param_meta[step.name]) > 0:\n",
     "                step_args = list(steps_param_meta[step.name].keys())\n",
     "                sm_module_file.write(\n",
-    "                    f\"def main(lib_name, remote_key, {', '.join(step_args)}):\\n\"\n",
+    "                    f\"def main({', '.join(main_args)}, {', '.join(step_args)}):\\n\"\n",
     "                )\n",
     "            else:\n",
-    "                sm_module_file.write(f\"def main(lib_name, remote_key):\\n\")\n",
+    "                sm_module_file.write(f\"def main({', '.join(main_args)}):\\n\")\n",
     "            if is_processing_step(step):\n",
     "                sm_module_file.write(\n",
     "                    f'{ind}has_additional_dependencies = Path(\"/opt/ml/processing/requirements/requirements.txt\").exists()\\n'\n",
@@ -1288,8 +1287,6 @@
     "                            f'{ind}{step_proc_var} = load_result(\"/opt/ml/input/data/{step_proc_var}\", \"{step_proc_var}\")\\n'\n",
     "                        )\n",
     "\n",
-    "            args = [\"lib_name\", \"remote_key\"]\n",
-    "\n",
     "            step_func_args = []\n",
     "            if len(steps_vars[step.name]) > 0:\n",
     "                step_vars = (\n",
@@ -1302,7 +1299,7 @@
     "                step_params = (\n",
     "                    format_args(steps_param_meta[step.name]).replace(\" \", \"\").split(\",\")\n",
     "                )\n",
-    "                args.extend(step_args)\n",
+    "                main_args.extend(step_args)\n",
     "                step_func_args.extend(step_params)\n",
     "            if len(step_func_args) > 0:\n",
     "                step_func_args = \",\".join(\n",
@@ -1343,9 +1340,9 @@
     "                f\"{ind}parser.formatter_class = argparse.RawDescriptionHelpFormatter\\n\"\n",
     "            )\n",
     "\n",
-    "            for arg in args:\n",
+    "            for main_arg in main_args:\n",
     "                sm_module_file.write(\n",
-    "                    f'{ind}parser.add_argument(f\"--{arg}\", required=True)\\n'\n",
+    "                    f'{ind}parser.add_argument(f\"--{main_arg}\", required=True)\\n'\n",
     "                )\n",
     "            sm_module_file.write(f\"{ind}return parser.parse_args()\")\n",
     "            sm_module_file.write(f\"\\n\")\n",
@@ -1370,7 +1367,7 @@
     "    sm_module_file.write(f\"{ind}tracker = None\\n\")\n",
     "    sm_module_file.write(f\"{ind}try:\\n\")\n",
     "    sm_module_file.write(\n",
-    "        f'{ind}{ind}tracker = StepTracker(self.bucket_name, self.flow_base_key, self.flow_run_id, \"{step.name}\")\\n'\n",
+    "        f'{ind}{ind}tracker = StepTracker(bucket_name, flow_base_key, flow_run_id, \"{step.name}\")\\n'\n",
     "    )\n",
     "    sm_module_file.write(f\"{ind}{ind}with tempfile.TemporaryDirectory() as temp_dir:\\n\")\n",
     "    sm_module_file.write(\n",
@@ -1387,7 +1384,6 @@
     "                f\"[{os.path.basename(flow_file.name)}] step return variable {step.return_stmt} shadows a parameter name - parameters must be unique\"\n",
     "            )\n",
     "        sm_module_file.write(f\"{ind}{ind}{ind}{ind}{step_func_call_text}\\n\")\n",
-    "        write_track_capture(sm_module_file, ind, 4)\n",
     "\n",
     "    sm_module_file.write(f\"{ind}{ind}{ind}{ind}tracker.completed()\\n\")\n",
     "    sm_module_file.write(f\"{ind}except BaseException:\\n\")\n",
@@ -1401,7 +1397,7 @@
     "    sm_module_file.write(\n",
     "        f'{ind}{ind}{ind}tracker.completed(status=\"FAILED\", except_info=except_info)\\n'\n",
     "    )\n",
-    "    sm_module_file.write(f\"{ind}{ind}raise\\n\\n\")\n",
+    "    sm_module_file.write(f\"{ind}{ind}raise\\n\")\n",
     "    sm_module_file.write(f\"\\n\")"
    ]
   },
@@ -1427,9 +1423,14 @@
     "        f\"{ind}all_files = [obj.key for obj in s3_res.Bucket(bucket_name).objects.filter(Prefix=remote_key)]\\n\"\n",
     "    )\n",
     "    sm_module_file.write(f\"{ind}for file in all_files:\\n\")\n",
-    "    sm_module_file.write(f\"{ind}{ind}file_name = file.split('/')[-1]\\n\")\n",
     "    sm_module_file.write(\n",
-    "        f\"{ind}{ind}s3_client.download_file(bucket_name, file, f'{{local_dir}}/{{file_name}}')\\n\"\n",
+    "        f\"{ind}{ind}file_name = file.replace(remote_key, '').lstrip('/')\\n\"\n",
+    "    )\n",
+    "    sm_module_file.write(f\"{ind}{ind}local_path = Path(local_dir, file_name)\\n\")\n",
+    "    sm_module_file.write(f\"{ind}{ind}if not local_path.parent.exists():\\n\")\n",
+    "    sm_module_file.write(f\"{ind}{ind}{ind}local_path.parent.mkdir(parents=True)\\n\")\n",
+    "    sm_module_file.write(\n",
+    "        f\"{ind}{ind}s3_client.download_file(bucket_name, file, f'{{local_path}}')\\n\"\n",
     "    )\n",
     "    sm_module_file.write(\"\\n\")\n",
     "\n",
@@ -1560,13 +1561,6 @@
    "source": [
     "generate_flows()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
