--- a/nbs/test/test_tracking.ipynb
+++ b/nbs/test/test_tracking.ipynb
@@ -13,7 +13,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "from sciflow.experiment.tracking import MockTracker, SciFlowTracker"
+    "from sciflow.experiment.tracking import MockTracker"
    ]
   },
   {
@@ -45,7 +45,7 @@
     "# exportn_step:something\n",
     "\n",
     "\n",
-    "def something(tracker: SciFlowTracker = None):\n",
+    "def something(tracker=None):\n",
     "    message = \"The first step\"\n",
     "    print(f\"{message}\")\n",
     "    print(f\"something tracker: {tracker}\")\n",
@@ -233,7 +233,7 @@
     "    model_level=None,\n",
     "    min_date=None,\n",
     "    traffic_percent=100,\n",
-    "    tracker: SciFlowTracker = None,\n",
+    "    tracker=None,\n",
     "):\n",
     "    print(f\"I captialised the message: {message.upper()}\")\n",
     "    data = get_utterances(model_level, min_date, traffic_percent)\n",
@@ -324,7 +324,7 @@
     "# exportn_step:fit\n",
     "\n",
     "\n",
-    "def fit(documents, workers=workers, tracker: SciFlowTracker = None):\n",
+    "def fit(documents, workers=workers, tracker=None):\n",
     "    model = Topics(documents, workers=workers)\n",
     "    print(f\"Fit tracker: {tracker}\")\n",
     "    if tracker:\n",
@@ -518,10 +518,23 @@
   }
  ],
  "metadata": {
+  "instance_type": "ml.m5.xlarge",
   "kernelspec": {
    "display_name": "sciflow (sciflow/3)",
    "language": "python",
    "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
