Removed unused papermill params tag in test_module. Fixed track param not being evaluated in to_metaflow & to_sagemaker

--- a/nbs/to_sagemaker.ipynb
+++ b/nbs/to_sagemaker.ipynb
@@ -33,7 +33,7 @@
     "from pathlib import Path, PosixPath\n",
     "from typing import Iterable\n",
     "\n",
-    "from fastcore.script import Param, call_parse\n",
+    "from fastcore.script import Param, bool_arg, call_parse\n",
     "from nbdev.export import find_default_export, get_config, nbglob, read_nb\n",
     "\n",
     "from sciflow.data_handler import ParamMeta, extract_param_meta\n",
@@ -1527,7 +1527,10 @@
     "# export\n",
     "\n",
     "\n",
-    "def generate_flows(track_experiment=True):\n",
+    "def generate_flows(track_experiment=True, clear_dir=True):\n",
+    "    if clear_dir:\n",
+    "        metaflows_dir = Path(get_config().path(\"flows_path\"), \"sagemaker\")\n",
+    "        [f.unlink() for f in metaflows_dir.iterdir() if not f.is_dir()]\n",
     "    nb_paths = nbglob(recursive=True)\n",
     "    for nb_path in nb_paths:\n",
     "        nb_to_sagemaker_pipeline(\n",
@@ -1548,7 +1551,7 @@
     "\n",
     "\n",
     "@call_parse\n",
-    "def sciflow_sagemaker(track: Param(\"Track flows as experiments\", default=True)):\n",
+    "def sciflow_sagemaker(track: Param(\"Track flows as experiments\", bool_arg) = True):\n",
     "    print(f\"Converting flows to sagemaker pipelines (experiment tracking = {track})\")\n",
     "    generate_flows(track)"
    ]
@@ -1559,28 +1562,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate_flows()"
+    "generate_flows(track_experiment=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generate_flows(track_experiment=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
-  "instance_type": "ml.m5.xlarge",
   "kernelspec": {
    "display_name": "sciflow (sciflow/3)",
    "language": "python",
    "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-west-1:368653567616:image-version/sciflow/3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.0"
   }
  },
  "nbformat": 4,
