--- a/nbs/to_metaflow.ipynb
+++ b/nbs/to_metaflow.ipynb
@@ -34,7 +34,7 @@
     "from typing import Iterable\n",
     "\n",
     "import numpy as np\n",
-    "from fastcore.script import Param, call_parse\n",
+    "from fastcore.script import Param, bool_arg, call_parse\n",
     "from nbdev.export import find_default_export, get_config, nbglob, read_nb\n",
     "\n",
     "from sciflow.data_handler import extract_param_meta\n",
@@ -625,7 +625,10 @@
     "# export\n",
     "\n",
     "\n",
-    "def generate_flows(config=None, track_experiment=True):\n",
+    "def generate_flows(config=None, track_experiment=True, clear_dir=True):\n",
+    "    if clear_dir:\n",
+    "        metaflows_dir = Path(get_config().path(\"flows_path\"), \"metaflow\")\n",
+    "        [f.unlink() for f in metaflows_dir.iterdir() if not f.is_dir()]\n",
     "    nb_paths = nbglob(recursive=True)\n",
     "    for nb_path in nb_paths:\n",
     "        nb_to_metaflow(\n",
@@ -642,7 +645,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate_flows()"
+    "generate_flows(track_experiment=False)"
    ]
   },
   {
@@ -664,9 +667,9 @@
     "\n",
     "\n",
     "@call_parse\n",
-    "def sciflow_metaflow(track: Param(\"Track flows as experiments\", default=True)):\n",
+    "def sciflow_metaflow(track: Param(\"Track flows as experiments\", bool_arg) = True):\n",
     "    print(f\"Converting flows to metaflow (experiment tracking = {track})\")\n",
-    "    generate_flows(get_config(), track)"
+    "    generate_flows(config=get_config(), track_experiment=track)"
    ]
   }
  ],
